fix gap at top of page

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-main {
+body {
   min-height: 100vh;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
